FormBuilder/src/main/webapp/assets/styles/partials/_panels.scss
.panel{
  background-color: $color-highlight;
  padding: 0px;
  border-width: 0px;
  border-radius: 0px;
  max-height: 800px;
}
.panel-half{
  height: 400px;
  margin-bottom: 0px;
  ul{
    height: 352px;
    overflow: scroll;
  }
}
.panel-content{
  overflow: scroll;
}
.panel-temp{
  font-size: 10px;
  color: $color-dim;
  margin-left: 15px;
}
.panel-header{
  background-color: $color-faint;
  color: $color-title;
  padding: 15px;

  &.row{
    margin: 0px 0px;
    padding: 8px;
  }
}

.panel-lg{
  padding: 0px 5px;
  .panel{
    max-height: none; //this may need to be removed later
  }
  .panel-content{
    padding: 5px;
  }
  .panel-header{
    padding-top: 13px;
    padding-bottom: 5px;
  }
}

.panel-header-heading {
  line-height: 20px;
  font-size: 14px;
  text-transform: uppercase;
  font-weight: 700;
  cursor: pointer;
}
.panel-link{
  display: block;
  cursor: pointer;
  color: $color-accent-bright;
  &:hover{
    text-decoration: underline;
  }
  &.btn{
    padding-left: 0px;
    &:hover{
      color: $color-accent-bright;
      background-color: transparent;
    }
  }
}
.panel-item{
  margin-left: 25px;
  margin-top: 15px;
}
.panel-link--accent{
  color: $color-accent-branded;
  font-weight: bold;
  &:hover, &:active, &:focus {
    color: $color-accent-branded !important;
  }
}
.panel-link--success{
  color: $color-accent-success;
  padding-left: 9px;
  padding-bottom: 0px;
  font-weight: bold;
  text-transform: uppercase;
  &:hover{
    background-color: transparent;
    color: darken($color-accent-success, 10%);
  }
}
.panel-divider{
  margin-left: 10px;
  margin-top: 15px;
  margin-bottom: 0px;
  border-top-color: $color-dim;
}
.panel-subtitle{
  text-transform: uppercase;
  font-size: 10px;
  color: $color-dim;
  float: right;
  background-color: $color-highlight;
  position: relative;
  top: -8px;
  padding: 0px 4px;
}
.panel-list .button-link{
  color: $color-title;
}
.panel-list-cart{
  margin-top: -15px;
  margin-left: 25px;
  .button-link{
    color: $color-accent-bright;
    margin-top: 15px;
    width: calc(100% - 15px);
    text-decoration: none;
    &.add-text {
      &:hover, &:active, &:focus {
        &:after {
          text-decoration: none;
          content: "Add";
          text-transform: uppercase;
        }
      }
    }
  }
}

